--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/static/original-baf19e4c08c65119f1cc6650ff3e7db7 (1).jpg">
+        <img src="/static/logo.jpg">
         <h1 style="font-size: 50px;">Harry Potter Movie Series</h1>
     </header>
     <section id="display">
