--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/static/logo.jpg">
+<!--         <img src="/static/logo.jpg"> -->
         <h1 style="font-size: 50px;">Harry Potter Movie Series</h1>
     </header>
     <section id="display">
